<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/tvMenuPrincipal"
            android:id="@+id/tvMenuPrincipal"
            android:textSize="48sp"
            android:gravity="center|bottom"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="35dp"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:text="@string/societat"
            android:id="@+id/btnsocietats"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_cercle_default" />

        <Button
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:text="@string/especies"
            android:id="@+id/btnespecies"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_cercle_default" />

        <Button
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:text="@string/btnAprenPescar"
            android:id="@+id/btnAprenPescar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_cercle_default" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom|center_horizontal"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgFisherman"
                android:background="@drawable/img_fisherman"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
