<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollNovaSocietat">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingBottom="25dp"
            android:paddingRight="25dp"
            android:paddingLeft="25dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvNomEspecie"
                    android:id="@+id/tvNomEspecieNova"
                    android:layout_gravity="center_horizontal|center_vertical" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="right">

                    <EditText
                        android:layout_width="176dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/etNomEspecieNova"
                        android:layout_marginLeft="10dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvImatgeMenu"
                    android:id="@+id/tvIdImgID" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <Button
                        android:layout_width="92dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnAfegirImatge"
                        android:id="@+id/btnAfegirImatge"
                        android:layout_marginLeft="10dp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivVistaImatge"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvImatgeCapcalera"
                    android:id="@+id/tvImgCapcalera" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <Button
                        android:layout_width="88dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnAfegirImatge"
                        android:id="@+id/btnAfegirImatgeCapcalera" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivCapcalera"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvNomCientific"
                    android:id="@+id/tvNomCientific" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="right">

                    <EditText
                        android:layout_width="176dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/etNomCientific" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvFamilia"
                    android:id="@+id/tvFamilia" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="end">

                    <EditText
                        android:layout_width="176dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/etFamilia" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvDescripcio"
                    android:id="@+id/tvDescripcio"
                    android:paddingTop="10dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="end">

                    <EditText
                        android:layout_width="176dp"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/etDescripcio"
                        android:layout_gravity="right" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>