<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgCapcalera"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:scaleType="fitXY" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearSocietatsCopy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"></LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_horizontal"
                        android:layout_marginStart="20dp"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:paddingTop="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvPoblacio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="20dp"
                            android:text="@string/tvPoblacio" />

                        <TextView
                            android:id="@+id/tvNomPoblacio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvDirec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="20dp"
                            android:text="@string/tvDireccio" />

                        <TextView
                            android:id="@+id/tvDireccio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvSocis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="20dp"
                            android:text="@string/tvNumSocis" />

                        <TextView
                            android:id="@+id/tvNumSocis"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvPresident"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginStart="20dp"
                            android:text="@string/tvPresident" />

                        <TextView
                            android:id="@+id/tvNomPresident"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>