<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:id="@+id/imgCapcalera"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"></LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvTitol"
                        android:layout_marginStart="20dp"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_gravity="start|center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingTop="15dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvCientific"
                            android:id="@+id/tvCientific"
                            android:layout_marginStart="20dp"
                            android:layout_gravity="start"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvFamilia"
                            android:id="@+id/tvFam"
                            android:layout_marginStart="20dp"
                            android:layout_gravity="start"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="50dp">

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:id="@+id/tvNomCientific" />

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:id="@+id/tvNomFamilia" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:text="@string/tvDescripcio"
                        android:id="@+id/tvDescripcio" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:id="@+id/tvTextDescripcio"
                        android:paddingBottom="16dp"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>